// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have no basic DOM regression for p-accordion 1`] = `
"<div class=\\"root root--size-small\\">
  <h2 class=\\"heading\\">
    <button id=\\"accordion-control\\" type=\\"button\\" aria-expanded=\\"false\\" aria-controls=\\"accordion-panel\\">
      <slot name=\\"heading\\">
      </slot>
      <p-icon class=\\"icon hydrated\\" aria-hidden=\\"true\\">
      </p-icon>
    </button>
  </h2>
  <div id=\\"accordion-panel\\" class=\\"collapsible\\" role=\\"region\\" aria-labelledby=\\"accordion-control\\" style=\\"height: 0px;\\">
    <div>
      <slot>
      </slot>
    </div>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-banner 1`] = `
"<style>
  p-inline-notification a {
    color: inherit !important;
    text-decoration: underline !important;
    transition: color var(--p-transition-duration, .24s) ease !important;
    outline: transparent solid 1px !important;
    outline-offset: 1px !important
  }

  p-inline-notification b,
  p-inline-notification strong {
    font-weight: 700 !important
  }

  p-inline-notification em,
  p-inline-notification i {
    font-style: normal !important
  }

  p-inline-notification a:hover {
    color: #d5001c !important
  }

  p-inline-notification a::-moz-focus-inner {
    border: 0 !important
  }

  p-inline-notification a:focus {
    outline-color: currentColor !important
  }

  p-inline-notification a:focus:not(:focus-visible) {
    outline-color: transparent !important
  }
</style>
<p-content-wrapper class=\\"hydrated\\">
  <p-inline-notification class=\\"root hydrated\\">
  </p-inline-notification>
</p-content-wrapper>"
`;

exports[`should have no basic DOM regression for p-button 1`] = `
"<style>
  p-text a {
    color: inherit !important;
    text-decoration: underline !important;
    transition: color var(--p-transition-duration, .24s) ease !important;
    outline: transparent solid 1px !important;
    outline-offset: 1px !important
  }

  p-text[theme=\\"dark\\"] a:hover {
    color: #ff0223 !important
  }

  p-text b,
  p-text strong {
    font-weight: 700 !important
  }

  p-text em,
  p-text i {
    font-style: normal !important
  }

  p-text a:hover {
    color: #d5001c !important
  }

  p-text a::-moz-focus-inner {
    border: 0 !important
  }

  p-text a:focus {
    outline-color: currentColor !important
  }

  p-text a:focus:not(:focus-visible) {
    outline-color: transparent !important
  }
</style>
<button class=\\"root root--with-label\\" type=\\"submit\\" tabindex=\\"0\\">
  <p-icon class=\\"icon hydrated\\" aria-hidden=\\"true\\">
  </p-icon>
  <p-text class=\\"label hydrated\\">
    <slot>
    </slot>
  </p-text>
</button>"
`;

exports[`should have no basic DOM regression for p-button-group 1`] = `
"<div class=\\"root root--direction-column root--direction-row-xs\\" role=\\"group\\">
  <slot>
  </slot>
</div>"
`;

exports[`should have no basic DOM regression for p-button-pure 1`] = `
"<style>
  p-text a {
    color: inherit !important;
    text-decoration: underline !important;
    transition: color var(--p-transition-duration, .24s) ease !important;
    outline: transparent solid 1px !important;
    outline-offset: 1px !important
  }

  p-text[theme=\\"dark\\"] a:hover {
    color: #ff0223 !important
  }

  p-text b,
  p-text strong {
    font-weight: 700 !important
  }

  p-text em,
  p-text i {
    font-style: normal !important
  }

  p-text a:hover {
    color: #d5001c !important
  }

  p-text a::-moz-focus-inner {
    border: 0 !important
  }

  p-text a:focus {
    outline-color: currentColor !important
  }

  p-text a:focus:not(:focus-visible) {
    outline-color: transparent !important
  }
</style>
<button class=\\"root root--with-icon root--size-small root--stretch-off root--label-align-right root--with-label\\" type=\\"submit\\" tabindex=\\"0\\">
  <p-icon class=\\"icon hydrated\\" aria-hidden=\\"true\\">
  </p-icon>
  <p-text class=\\"label hydrated\\">
    <slot>
    </slot>
  </p-text>
</button>"
`;

exports[`should have no basic DOM regression for p-checkbox-wrapper 1`] = `
"<label class=\\"root\\">
  <slot>
  </slot>
</label>"
`;

exports[`should have no basic DOM regression for p-content-wrapper 1`] = `
"<div class=\\"root\\">
  <slot>
  </slot>
</div>"
`;

exports[`should have no basic DOM regression for p-divider 1`] = `"<hr class=\\"root root--orientation-horizontal\\">"`;

exports[`should have no basic DOM regression for p-fieldset-wrapper 1`] = `
"<fieldset class=\\"root\\">
  <slot>
  </slot>
</fieldset>"
`;

exports[`should have no basic DOM regression for p-flex 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-flex-item 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-grid 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-grid-item 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-headline 1`] = `
"<h1 class=\\"root root--variant-headline-1\\">
  <slot>
  </slot>
</h1>"
`;

exports[`should have no basic DOM regression for p-icon 1`] = `
"<i class=\\"root\\">
  <svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" width=\\"100%\\" height=\\"100%\\">
    <path d=\\"M14.75 12l-6 8h1.26L16 12l-5.99-8H8.75l6 8z\\">
    </path>
  </svg>
</i>"
`;

exports[`should have no basic DOM regression for p-inline-notification 1`] = `
"<style>
  p-text a {
    color: inherit !important;
    text-decoration: underline !important;
    transition: color var(--p-transition-duration, .24s) ease !important;
    outline: transparent solid 1px !important;
    outline-offset: 1px !important
  }

  p-text[theme=\\"dark\\"] a:hover {
    color: #ff0223 !important
  }

  p-text b,
  p-text strong {
    font-weight: 700 !important
  }

  p-text em,
  p-text i {
    font-style: normal !important
  }

  p-text a:hover {
    color: #d5001c !important
  }

  p-text a::-moz-focus-inner {
    border: 0 !important
  }

  p-text a:focus {
    outline-color: currentColor !important
  }

  p-text a:focus:not(:focus-visible) {
    outline-color: transparent !important
  }
</style>
<p-icon class=\\"icon hydrated\\" aria-hidden=\\"true\\">
</p-icon>
<div id=\\"banner\\" class=\\"content\\" role=\\"status\\" aria-live=\\"polite\\" aria-labelledby=\\"label\\" aria-describedby=\\"description\\">
  <p-text id=\\"description\\" class=\\"hydrated\\">
    <slot>
    </slot>
  </p-text>
</div>
<p-button-pure class=\\"close hydrated\\" aria-controls=\\"banner\\">
  Close notification</p-button-pure>"
`;

exports[`should have no basic DOM regression for p-link 1`] = `
"<style>
  p-text a {
    color: inherit !important;
    text-decoration: underline !important;
    transition: color var(--p-transition-duration, .24s) ease !important;
    outline: transparent solid 1px !important;
    outline-offset: 1px !important
  }

  p-text[theme=\\"dark\\"] a:hover {
    color: #ff0223 !important
  }

  p-text b,
  p-text strong {
    font-weight: 700 !important
  }

  p-text em,
  p-text i {
    font-style: normal !important
  }

  p-text a:hover {
    color: #d5001c !important
  }

  p-text a::-moz-focus-inner {
    border: 0 !important
  }

  p-text a:focus {
    outline-color: currentColor !important
  }

  p-text a:focus:not(:focus-visible) {
    outline-color: transparent !important
  }
</style>
<a class=\\"root\\" href=\\"string\\" target=\\"_self\\">
  <p-icon class=\\"icon hydrated\\" aria-hidden=\\"true\\">
  </p-icon>
  <p-text class=\\"label hydrated\\">
    <slot>
    </slot>
  </p-text>
</a>"
`;

exports[`should have no basic DOM regression for p-link-pure 1`] = `
"<style>
  p-text a {
    color: inherit !important;
    text-decoration: underline !important;
    transition: color var(--p-transition-duration, .24s) ease !important;
    outline: transparent solid 1px !important;
    outline-offset: 1px !important
  }

  p-text[theme=\\"dark\\"] a:hover {
    color: #ff0223 !important
  }

  p-text b,
  p-text strong {
    font-weight: 700 !important
  }

  p-text em,
  p-text i {
    font-style: normal !important
  }

  p-text a:hover {
    color: #d5001c !important
  }

  p-text a::-moz-focus-inner {
    border: 0 !important
  }

  p-text a:focus {
    outline-color: currentColor !important
  }

  p-text a:focus:not(:focus-visible) {
    outline-color: transparent !important
  }
</style>
<a class=\\"root\\" href=\\"string\\" target=\\"_self\\">
  <p-icon class=\\"icon hydrated\\" aria-hidden=\\"true\\">
  </p-icon>
  <p-text class=\\"label hydrated\\">
    <slot>
    </slot>
  </p-text>
</a>"
`;

exports[`should have no basic DOM regression for p-link-social 1`] = `
"<style>
  p-text a {
    color: inherit !important;
    text-decoration: underline !important;
    transition: color var(--p-transition-duration, .24s) ease !important;
    outline: transparent solid 1px !important;
    outline-offset: 1px !important
  }

  p-text[theme=\\"dark\\"] a:hover {
    color: #ff0223 !important
  }

  p-text b,
  p-text strong {
    font-weight: 700 !important
  }

  p-text em,
  p-text i {
    font-style: normal !important
  }

  p-text a:hover {
    color: #d5001c !important
  }

  p-text a::-moz-focus-inner {
    border: 0 !important
  }

  p-text a:focus {
    outline-color: currentColor !important
  }

  p-text a:focus:not(:focus-visible) {
    outline-color: transparent !important
  }
</style>
<a class=\\"root\\" href=\\"string\\" target=\\"_self\\">
  <p-icon class=\\"icon hydrated\\" aria-hidden=\\"true\\">
  </p-icon>
  <p-text class=\\"label hydrated\\">
    <slot>
    </slot>
  </p-text>
</a>"
`;

exports[`should have no basic DOM regression for p-marque 1`] = `
"<picture>
  <source srcset=\\"http://localhost:3001/marque/porsche-marque-trademark.medium.min.5c6af9aa7946fea34f60c8f8c95d0188@1x.webp 1x,http://localhost:3001/marque/porsche-marque-trademark.medium.min.fff6e9b91481cc5b1fc6c9b62987ccaf@2x.webp 2x,http://localhost:3001/marque/porsche-marque-trademark.medium.min.f67092ff6b5f4ecb4add73d6ae153db0@3x.webp 3x\\" media=\\"(min-width: 1300px)\\" type=\\"image/webp\\">
  <source srcset=\\"http://localhost:3001/marque/porsche-marque-trademark.medium.min.da075315857e239ff46bf4c150648ff0@1x.png 1x,http://localhost:3001/marque/porsche-marque-trademark.medium.min.aa801f42028b1c385a5e26ae115da598@2x.png 2x,http://localhost:3001/marque/porsche-marque-trademark.medium.min.824818d15eaf445f50e0a2391613f214@3x.png 3x\\" media=\\"(min-width: 1300px)\\" type=\\"image/png\\">
  <source srcset=\\"http://localhost:3001/marque/porsche-marque-trademark.small.min.783639706bead66b2d56e3b8b64bd61f@1x.webp 1x,http://localhost:3001/marque/porsche-marque-trademark.small.min.760a57efa93d4e7e16e26128ec7ead46@2x.webp 2x,http://localhost:3001/marque/porsche-marque-trademark.small.min.1726036a7829347e1e24d1eb54fc0d64@3x.webp 3x\\" type=\\"image/webp\\">
  <source srcset=\\"http://localhost:3001/marque/porsche-marque-trademark.small.min.020244b41a29323e2a7932a264514cdf@1x.png 1x,http://localhost:3001/marque/porsche-marque-trademark.small.min.92184fae44511ceda8320443c17110b1@2x.png 2x,http://localhost:3001/marque/porsche-marque-trademark.small.min.fd545cea4298f5d797246d5805711646@3x.png 3x\\" type=\\"image/png\\">
  <img src=\\"http://localhost:3001/marque/porsche-marque-trademark.medium.min.aa801f42028b1c385a5e26ae115da598@2x.png\\" alt=\\"Porsche\\">
</picture>"
`;

exports[`should have no basic DOM regression for p-modal 1`] = `
"<aside class=\\"root root--fullscreen-off\\" role=\\"dialog\\" aria-modal=\\"true\\" aria-hidden=\\"true\\">
  <header>
    <p-button-pure class=\\"close hydrated\\">
      Close modal</p-button-pure>
  </header>
  <slot>
  </slot>
</aside>"
`;

exports[`should have no basic DOM regression for p-pagination 1`] = `
"<nav class=\\"root root--size-5 root--size-7-xs\\" role=\\"navigation\\" aria-label=\\"Pagination\\">
  <ul class=\\"items\\">
    <li class=\\"item\\">
      <span class=\\"prev prev--disabled\\" role=\\"button\\" aria-disabled=\\"true\\" aria-label=\\"Previous page\\">
        <p-icon aria-hidden=\\"true\\" class=\\"hydrated\\">
        </p-icon>
      </span>
    </li>
    <li class=\\"item\\">
      <span class=\\"goto goto--current\\" role=\\"button\\" tabindex=\\"0\\" aria-label=\\"Page 1\\" aria-current=\\"page\\">
        1</span>
    </li>
    <li class=\\"item\\">
      <span class=\\"next next--disabled\\" role=\\"button\\" aria-disabled=\\"true\\" aria-label=\\"Next page\\">
        <p-icon aria-hidden=\\"true\\" class=\\"hydrated\\">
        </p-icon>
      </span>
    </li>
  </ul>
</nav>"
`;

exports[`should have no basic DOM regression for p-popover 1`] = `
"<p-button-pure class=\\"hydrated\\">
  More information</p-button-pure>"
`;

exports[`should have no basic DOM regression for p-radio-button-wrapper 1`] = `
"<label class=\\"root\\">
  <slot>
  </slot>
</label>"
`;

exports[`should have no basic DOM regression for p-select-wrapper 1`] = `
"<div class=\\"root\\">
  <label class=\\"label\\">
    <p-icon class=\\"icon hydrated\\" aria-hidden=\\"true\\">
    </p-icon>
    <slot>
    </slot>
  </label>
  <p-select-wrapper-dropdown class=\\"hydrated\\">
  </p-select-wrapper-dropdown>
</div>"
`;

exports[`should have no basic DOM regression for p-spinner 1`] = `
"<span class=\\"root root--size-small\\" role=\\"alert\\" aria-live=\\"assertive\\">
  <span class=\\"sr-text\\">
    &nbsp;</span>
  <svg viewBox=\\"-16 -16 32 32\\" width=\\"100%\\" height=\\"100%\\" focusable=\\"false\\" aria-hidden=\\"true\\">
    <circle r=\\"9\\">
    </circle>
    <circle r=\\"9\\">
    </circle>
  </svg>
</span>"
`;

exports[`should have no basic DOM regression for p-switch 1`] = `
"<style>
  p-text a {
    color: inherit !important;
    text-decoration: underline !important;
    transition: color var(--p-transition-duration, .24s) ease !important;
    outline: transparent solid 1px !important;
    outline-offset: 1px !important
  }

  p-text[theme=\\"dark\\"] a:hover {
    color: #ff0223 !important
  }

  p-text b,
  p-text strong {
    font-weight: 700 !important
  }

  p-text em,
  p-text i {
    font-style: normal !important
  }

  p-text a:hover {
    color: #d5001c !important
  }

  p-text a::-moz-focus-inner {
    border: 0 !important
  }

  p-text a:focus {
    outline-color: currentColor !important
  }

  p-text a:focus:not(:focus-visible) {
    outline-color: transparent !important
  }
</style>
<label class=\\"root root--stretch-off root--label-align-right root--label-visible\\">
  <p-text class=\\"text hydrated\\" id=\\"label\\">
    <slot>
    </slot>
  </p-text>
  <button type=\\"button\\" role=\\"switch\\" aria-labelledby=\\"label\\" aria-checked=\\"false\\" tabindex=\\"0\\">
    <span class=\\"toggle\\">
    </span>
  </button>
</label>"
`;

exports[`should have no basic DOM regression for p-table 1`] = `
"<div class=\\"root\\">
  <div class=\\"scroll-area\\">
    <div class=\\"table\\" role=\\"table\\">
      <slot>
      </slot>
      <span class=\\"scroll-trigger\\">
      </span>
    </div>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-table-body 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-table-cell 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-table-head 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-table-head-cell 1`] = `
"<span class=\\"\\">
  <slot>
  </slot>
</span>"
`;

exports[`should have no basic DOM regression for p-table-head-row 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-table-row 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-tabs 1`] = `
"<p-tabs-bar class=\\"tabs-bar hydrated\\">
</p-tabs-bar>
<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-tabs-bar 1`] = `
"<div class=\\"root root--size-small\\">
  <div class=\\"scroll-area\\" role=\\"tablist\\">
    <div class=\\"scroll-wrapper\\">
      <slot>
      </slot>
      <span class=\\"status-bar\\" style=\\"transform: translate3d(0rem,0,0); width: 0;\\">
      </span>
      <div class=\\"scroll-wrapper__trigger\\">
      </div>
      <div class=\\"scroll-wrapper__trigger\\">
      </div>
    </div>
  </div>
  <div class=\\"action action--prev action--hidden\\">
    <span class=\\"gradient gradient--prev\\">
    </span>
    <p-button-pure aria-hidden=\\"true\\" hide-label=\\"true\\" class=\\"hydrated\\">
      prev</p-button-pure>
  </div>
  <div class=\\"action action--next action--hidden\\">
    <span class=\\"gradient gradient--next\\">
    </span>
    <p-button-pure aria-hidden=\\"true\\" hide-label=\\"true\\" class=\\"hydrated\\">
      next</p-button-pure>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-tabs-item 1`] = `
"<section>
  <slot>
  </slot>
</section>"
`;

exports[`should have no basic DOM regression for p-text 1`] = `
"<p class=\\"root root--size-small\\">
  <slot>
  </slot>
</p>"
`;

exports[`should have no basic DOM regression for p-text-field-wrapper 1`] = `
"<div class=\\"root\\">
  <label class=\\"label\\">
    <slot>
    </slot>
  </label>
</div>"
`;

exports[`should have no basic DOM regression for p-text-list 1`] = `
"<ul role=\\"list\\" class=\\"root\\">
  <slot>
  </slot>
</ul>"
`;

exports[`should have no basic DOM regression for p-text-list-item 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-textarea-wrapper 1`] = `
"<label class=\\"root root--visible\\">
  <slot>
  </slot>
</label>"
`;

exports[`should have no basic DOM regression for p-toast 1`] = `""`;
